--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 				<div class="container">
 
 					<a class="navbar-brand" style="padding:0px; height:20px" href="index.html">
-						<img src="img/logo/new.png"  style="width:80px" alt="">
+						<img src="img/logo/l1.png"  style="width:100px; margin-top:-15px" alt="">
 					</a>
 
 					<a href="#" class="mobile-nav-toggle"> 
@@ -201,10 +201,10 @@
 
 		<!-- home-section 
 			================================================== -->
-			<div id="mycarousel" class="carousel slide carousel-fade" data-ride="carousel">
+			<div id="mycarousel" class="carousel slide carousel-fade" data-ride="">
 				<div class="carousel-inner">
 					<div class="item active">
-						<img src="img/slider/banner1.jpg" class="d-block w-100">
+						<img src="img/M.png" class="d-block w-100">
 					</div>
 					<div class="item">
 						<img src="img/slider/banner2.jpg" class="d-block w-100">
@@ -289,7 +289,7 @@
 						<div class="col-lg-6 col-md-12">
 							<div class="collection-post">
 								<div class="inner-collection">
-									<img src="img/course/ncourse1.jpg" alt="">
+									<img src="img/ENGINEERING.png" alt="">
 									<a href="#" class="hover-post">
 										<span class="title">Web Development</span>
 										<span class="numb-courses">3 Courses</span>
@@ -300,7 +300,7 @@
 						<div class="col-lg-3 col-md-6">
 							<div class="collection-post">
 								<div class="inner-collection">
-									<img src="img/course/ncourse2.jpg" alt="">
+									<img src="img/e.png" alt="">
 									<a href="#" class="hover-post">
 										<span class="title">Web Design</span>
 										<span class="numb-courses">2 Courses</span>
@@ -309,7 +309,7 @@
 							</div>
 							<div class="collection-post">
 								<div class="inner-collection">
-									<img src="img/course/ncourse3.jpg" alt="">
+									<img src="img/e.png" alt="">
 									<a href="#" class="hover-post">
 										<span class="title">Technology</span>
 										<span class="numb-courses">3 Courses</span>
@@ -320,7 +320,7 @@
 						<div class="col-lg-3 col-md-6">
 							<div class="collection-post">
 								<div class="inner-collection">
-									<img src="img/course/scourse1.jpg" alt="">
+									<img src="img/NURTURE.png" alt="">
 									<a href="#" class="hover-post">
 										<span class="title">Photography</span>
 										<span class="numb-courses">3 Courses</span>
@@ -329,7 +329,7 @@
 							</div>
 							<div class="collection-post">
 								<div class="inner-collection">
-									<img src="img/course/scourse1.jpg" alt="">
+									<img src="img/NURTURE.png" alt="">
 									<a href="#" class="hover-post">
 										<span class="title">Design</span>
 										<span class="numb-courses">3 Courses</span>
@@ -404,7 +404,7 @@
 							<div class="course-post">
 								<div class="course-thumbnail-holder">
 									<a href="single-course.html">
-										<img src="img/course/scourse1.jpg" alt="">
+										<img src="img/n.png" alt="">
 									</a>
 								</div>
 								<div class="course-content-holder">
@@ -431,7 +431,7 @@
 							<div class="course-post">
 								<div class="course-thumbnail-holder">
 									<a href="single-course.html">
-										<img src="img/course/scourse2.jpg" alt="">
+										<img src="img/nn.png" alt="">
 									</a>
 								</div>
 								<div class="course-content-holder">
@@ -458,7 +458,7 @@
 							<div class="course-post">
 								<div class="course-thumbnail-holder">
 									<a href="single-course.html">
-										<img src="img/course/scourse3.jpg" alt="">
+										<img src="img/nnn.png" alt="">
 									</a>
 								</div>
 								<div class="course-content-holder">
@@ -484,7 +484,7 @@
 							<div class="course-post">
 								<div class="course-thumbnail-holder">
 									<a href="single-course.html">
-										<img src="img/course/scourse4.jpg" alt="">
+										<img src="img/nnnn.png" alt="">
 									</a>
 								</div>
 								<div class="course-content-holder">
