--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
 								<div class="inner-collection">
 									<img src="img/ENGINEERING.png" alt="">
 									<a href="#" class="hover-post">
-										<span class="title">Web Development</span>
+										<span class="title">IIT</span>
 										<span class="numb-courses">3 Courses</span>
 									</a>
 								</div>
@@ -302,7 +302,7 @@
 								<div class="inner-collection">
 									<img src="img/e.png" alt="">
 									<a href="#" class="hover-post">
-										<span class="title">Web Design</span>
+										<span class="title">Neet</span>
 										<span class="numb-courses">2 Courses</span>
 									</a>
 								</div>
@@ -311,7 +311,7 @@
 								<div class="inner-collection">
 									<img src="img/e.png" alt="">
 									<a href="#" class="hover-post">
-										<span class="title">Technology</span>
+										<span class="title">Pre - Nurture</span>
 										<span class="numb-courses">3 Courses</span>
 									</a>
 								</div>
@@ -322,7 +322,7 @@
 								<div class="inner-collection">
 									<img src="img/NURTURE.png" alt="">
 									<a href="#" class="hover-post">
-										<span class="title">Photography</span>
+										<span class="title">Pre - Nurture</span>
 										<span class="numb-courses">3 Courses</span>
 									</a>
 								</div>
@@ -331,7 +331,7 @@
 								<div class="inner-collection">
 									<img src="img/NURTURE.png" alt="">
 									<a href="#" class="hover-post">
-										<span class="title">Design</span>
+										<span class="title">Pre - Nurture</span>
 										<span class="numb-courses">3 Courses</span>
 									</a>
 								</div>
