--- a/faculty.html
+++ b/faculty.html
@@ -140,6 +140,10 @@
 			.item{
 				text-align: center;
 			}
+			.owl-carousel{
+				width:50%;
+				margin:auto;
+			}
 			@media(max-width:768px){
 				#n2{
 					display:none;
@@ -196,17 +200,11 @@
     <div class="item"><img src="img/akash.png" class="img-responsive" style="width:200px; height:200px; margin:auto; border-radius:50%">
     	<h3 style="text-align:center">Manju Sir</h3>
         <h5 style="text-align:center">Exp 15<sup>+</sup>Years</h5></div>
-    <div class="item"><img src="img/arun.png" class="img-responsive" style="width:200px; height:200px; margin:auto; border-radius:50%">
-    	<h3>NEET</h3>
-    	<h5>ARUN SIR</h5></div>
-    <div class="item"><img src="img/arun.png" class="img-responsive" style="width:200px; height:200px; margin:auto; border-radius:50%">
-    <h3 style="text-align:center">NEET</h3>
-    	<h5 style="text-align:center">ARUN SIR</h5>
+    <div class="item"><img src="img/choose/Akshat.jpg" class="img-responsive" style="width:200px; height:200px; margin:auto; border-radius:50%">
+    	<h3>Akshat Sir</h3>
+    	 <h5 style="text-align:center">Exp 6<sup>+</sup>Years</h5>
     </div>
-    <div class="item"><img src="img/pyush.png" class="img-responsive" style="width:200px; height:200px; margin:auto; border-radius:50%">
-    <h3 style="text-align:center">PRE-NURTURE</h3>
-    	<h5 style="text-align:center">PYUSH SIR</h5>
-    </div>
+   
     
   
    
@@ -216,37 +214,19 @@
 						</div>
 		</div>	
 		<div class="owl-carousel owl-theme">
-    <div class="item">
-    	<img src="img/akash.png" class="img-responsive" style="width:200px; height:200px; margin:auto; border-radius:50%">
-    	<h3 style="text-align:center"> IIT</h3>
-        <h5 style="text-align:center">Akash Sir</h5>
+     <div class="item"><img src="img/choose/as.jpg" class="img-responsive" style="width:200px; height:200px; margin:auto; border-radius:50%">
+    	<h3 style="text-align:center">A.S. Sir<small>Hod</small></h3>
+        <h5 style="text-align:center">Exp 6<sup>+</sup>Years</h5>
     </div>
-    <div class="item"><img src="img/akash.png" class="img-responsive" style="width:200px; height:200px; margin:auto; border-radius:50%">
-    	<h3 style="text-align:center">IIT</h3>
-        <h5 style="text-align:center">Akash Sir</h5></div>
-    <div class="item"><img src="img/arun.png" class="img-responsive" style="width:200px; height:200px; margin:auto; border-radius:50%">
-    	<h3>NEET</h3>
-    	<h5>ARUN SIR</h5></div>
-    <div class="item"><img src="img/arun.png" class="img-responsive" style="width:200px; height:200px; margin:auto; border-radius:50%">
-    <h3 style="text-align:center">NEET</h3>
-    	<h5 style="text-align:center">ARUN SIR</h5>
+     <div class="item"><img src="img/choose/vishal.jpg" class="img-responsive" style="width:200px; height:200px; margin:auto; border-radius:50%">
+    	<h3 style="text-align:center">Vishal Sir</h3>
+        <h5 style="text-align:center">Exp 5<sup>+</sup>Years</h5>
     </div>
-    <div class="item"><img src="img/pyush.png" class="img-responsive" style="width:200px; height:200px; margin:auto; border-radius:50%">
-    <h3 style="text-align:center">PRE-NURTURE</h3>
-    	<h5 style="text-align:center">PYUSH SIR</h5>
+     <div class="item"><img src="img/choose/budhraj.jpg" class="img-responsive" style="width:200px; height:200px; margin:auto; border-radius:50%">
+    	<h3 style="text-align:center">B.S.R. Sir</h3>
+        <h5 style="text-align:center">Exp 5<sup>+</sup>Years</h5>
     </div>
-    <div class="item"><img src="img/pyush.png" class="img-responsive"  style="width:200px; height:200px; margin:auto; border-radius:50%">
-    <h3 style="text-align:center">PRE-NURTURE</h3>
-    	<h5 style="text-align:center">PYUSH SIR</h5>
-    </div>
-    <div class="item"><img src="img/arun.png" class="img-responsive" style="width:200px; height:200px; margin:auto;border-radius:50%">
-    <h3 style="text-align:center">NEET</h3>
-    	<h5 style="text-align:center">ARUN SIR</h5>
-    </div>
-    <div class="item"><img src="img/arun.png" class="img-responsive" style="width:200px; height:200px; margin:auto; border-radius:50%">
-    <h3 style="text-align:center">NEET</h3>
-    	<h5 style="text-align:center">ARUN SIR</h5>
-    </div>
+  
   
    
 </div>	
@@ -254,40 +234,20 @@
 				<h1 style="text-align:center">Department of Mathematics</h1>	
 						</div>
 		</div>	
-		<div class="owl-carousel owl-theme">
-    <div class="item">
-    	<img src="img/akash.png" class="img-responsive" style="width:200px; height:200px; margin:auto; border-radius:50%">
-    	<h3 style="text-align:center"> IIT</h3>
-        <h5 style="text-align:center">Akash Sir</h5>
+	<div class="owl-carousel owl-theme">
+     <div class="item"><img src="img/choose/piyush.jpg" class="img-responsive" style="width:200px; height:200px; margin:auto; border-radius:50%">
+    	<h3 style="text-align:center">Piyush Sir<small>Hod</small></h3>
+        <h5 style="text-align:center">Exp 8<sup>+</sup>Years</h5>
     </div>
-    <div class="item"><img src="img/akash.png" class="img-responsive" style="width:200px; height:200px; margin:auto; border-radius:50%">
-    	<h3 style="text-align:center">IIT</h3>
-        <h5 style="text-align:center">Akash Sir</h5></div>
-    <div class="item"><img src="img/arun.png" class="img-responsive" style="width:200px; height:200px; margin:auto; border-radius:50%">
-    	<h3>NEET</h3>
-    	<h5>ARUN SIR</h5></div>
-    <div class="item"><img src="img/arun.png" class="img-responsive" style="width:200px; height:200px; margin:auto; border-radius:50%">
-    <h3 style="text-align:center">NEET</h3>
-    	<h5 style="text-align:center">ARUN SIR</h5>
+     <div class="item"><img src="img/choose/SagarSir.jpg" class="img-responsive" style="width:200px; height:200px; margin:auto; border-radius:50%">
+    	<h3 style="text-align:center">Sagar Sir</h3>
+        <h5 style="text-align:center">Exp 5<sup>+</sup>Years</h5>
     </div>
-    <div class="item"><img src="img/pyush.png" class="img-responsive" style="width:200px; height:200px; margin:auto; border-radius:50%">
-    <h3 style="text-align:center">PRE-NURTURE</h3>
-    	<h5 style="text-align:center">PYUSH SIR</h5>
-    </div>
-    <div class="item"><img src="img/pyush.png" class="img-responsive"  style="width:200px; height:200px; margin:auto; border-radius:50%">
-    <h3 style="text-align:center">PRE-NURTURE</h3>
-    	<h5 style="text-align:center">PYUSH SIR</h5>
-    </div>
-    <div class="item"><img src="img/arun.png" class="img-responsive" style="width:200px; height:200px; margin:auto;border-radius:50%">
-    <h3 style="text-align:center">NEET</h3>
-    	<h5 style="text-align:center">ARUN SIR</h5>
-    </div>
-    <div class="item"><img src="img/arun.png" class="img-responsive" style="width:200px; height:200px; margin:auto; border-radius:50%">
-    <h3 style="text-align:center">NEET</h3>
-    	<h5 style="text-align:center">ARUN SIR</h5>
+     <div class="item"><img src="img/choose/budhraj.jpg" class="img-responsive" style="width:200px; height:200px; margin:auto; border-radius:50%">
+    	<h3 style="text-align:center">B.S.R. Sir</h3>
+        <h5 style="text-align:center">Exp 5<sup>+</sup>Years</h5>
     </div>
   
-   
 </div>
 <div class="facultyInfo">
 				<h1 style="text-align:center">Department of Biology</h1>	
@@ -309,23 +269,7 @@
     <h3 style="text-align:center">NEET</h3>
     	<h5 style="text-align:center">ARUN SIR</h5>
     </div>
-    <div class="item"><img src="img/pyush.png" class="img-responsive" style="width:200px; height:200px; margin:auto; border-radius:50%">
-    <h3 style="text-align:center">PRE-NURTURE</h3>
-    	<h5 style="text-align:center">PYUSH SIR</h5>
-    </div>
-    <div class="item"><img src="img/pyush.png" class="img-responsive"  style="width:200px; height:200px; margin:auto; border-radius:50%">
-    <h3 style="text-align:center">PRE-NURTURE</h3>
-    	<h5 style="text-align:center">PYUSH SIR</h5>
-    </div>
-    <div class="item"><img src="img/arun.png" class="img-responsive" style="width:200px; height:200px; margin:auto;border-radius:50%">
-    <h3 style="text-align:center">NEET</h3>
-    	<h5 style="text-align:center">ARUN SIR</h5>
-    </div>
-    <div class="item"><img src="img/arun.png" class="img-responsive" style="width:200px; height:200px; margin:auto; border-radius:50%">
-    <h3 style="text-align:center">NEET</h3>
-    	<h5 style="text-align:center">ARUN SIR</h5>
-    </div>
-  
+
    
 </div>		
  <footer>
@@ -431,7 +375,7 @@
             items:3
         },
         1000:{
-            items:5
+            items:3
         }
     }
 });
