--- a/vijetan.html
+++ b/vijetan.html
@@ -270,7 +270,7 @@
 									</div>
 								</div>
 								<div class="course-single-gallery">
-									<img src="img/teacher/vijeta.png" alt="">
+									<img src="images/vijetan.png" alt="">
 								</div>
 
 							</div>
