--- a/vinay.html
+++ b/vinay.html
@@ -211,7 +211,8 @@
 				</nav>
 			</div>
 
-		</header>		<!-- End Header -->
+		</header>
+		<!-- End Header -->
 
 		<!-- page-banner-section 
 			================================================== -->
@@ -219,7 +220,7 @@
 			<div class="container">
 				<h1>MAIN & ADVANCED</h1>
 				<ul class="page-depth">
-					<li><a href="index.html">Studiare</a></li>
+					
 					<li><a href="courses.html">Courses</a></li>
 					<li><a href="single-course.html">MAIN & ADVANCED</a></li>
 				</ul>
@@ -246,7 +247,7 @@
 										<div class="info">
 											<span class="label">Teacher</span>
 											<div class="value">
-												<a href="single-teacher.html">Vijeta</a>
+												<a href="single-teacher.html">Vishesh</a>
 											</div>
 										</div>
 									</div>
@@ -270,19 +271,24 @@
 									</div>
 								</div>
 								<div class="course-single-gallery">
-									<img src="img/teacher/vijeta.png" alt="">
+									<img src="images/vinay.png" alt="">
 								</div>
 
 							</div>
 
 							<!-- single course content -->
 							<div class="single-course-content">
-								<h2>VISHESH Course is specially designed of students who are currently studying
-in 12th class and are willing to take break for preparation of IIT JEE
-examination. It is an immediate help to those students who have not
-undergone specialised Coaching/ Training for JEE (Main+Advanced) during
-their Class XI & XII. Our objective is to help students do focussed study for 1
-year to utilise remaining time for preparation of IIT JEE.</h2>
+								<h2>For Students Presently in Class VII going to VIII in the year 2021)</h2>
+								  <p>This Program focuses on enhancing Logical Thinking, IQ, Mental Ability, Science & Mathematics at a level required for National Level Scholastic Exam like National Talent Search Exam (NTSE) for Class X</p>
+								<h2>PROGRAM FOCUS & OBJECTIVES </h2>
+                                  <p>An Ideal Program for Students who wish to climb the ladder of academic success from Class VIII itself.</p><p>This program helps the student in imbibing the fundamental of subjects and development of personality.<span style="font-weight:bold">The
+program ‘Train the Brain’ is specifically designed for overall logical thinking, IQ and scientific aptitude which
+will be useful throughout life and this program introduces the basic academic structure required to excel in
+competitive exams.</span></p>
+<p style="font-weight:bold">The course will lay Strong Foundation & Preliminary Preparation for International Level Olympiads in
+Mathematics and Junior Sciences (National and Regional Level stages as National Standard Examination in
+Junior Science (NSEJS) and Regional Mathematics Olympiad (RMO)) and will also ensure Excellence in
+School Exam.</p>
 								<h2>What Will I Learn?</h2>
 								<p>Improve your productivity, get things done, and find more time for what’s most important with Time Management Tips. This weekly series provides actionable time management techniques to help people better manage their time and ultimately become more productive. Time management expert Dave Crenshaw provides a new tip every Monday, touching on a wide variety of topics. Tune in to learn about everything from managing emails and calendars to setting priorities, collaborating with coworkers, reducing interruptions, crafting a “productivity mindset,” and creating a more comfortable and effective work environment.</p>
 								<h2>Learning Objectives</h2>
@@ -773,40 +779,6 @@ year to utilise remaining time for preparation of IIT JEE.</h2>
 				</div>
 
 			</div>
-			<!--------------------------------------------------Testinomials---------------------------------------------------->
-			<div class="owl-carousel owl-theme">
-    <div class="item"><h4>1</h4></div>
-    <div class="item"><h4>2</h4></div>
-    <div class="item"><h4>3</h4></div>
-    <div class="item"><h4>4</h4></div>
-    <div class="item"><h4>5</h4></div>
-    <div class="item"><h4>6</h4></div>
-    <div class="item"><h4>7</h4></div>
-    <div class="item"><h4>8</h4></div>
-    <div class="item"><h4>9</h4></div>
-    <div class="item"><h4>10</h4></div>
-    <div class="item"><h4>11</h4></div>
-    <div class="item"><h4>12</h4></div>
-</div>
-<script>
-	$(document).ready(function (){
-		$('.owl-carousel').owlCarousel({
-    loop:true,
-    margin:10,
-    nav:true,
-    responsive:{
-        0:{
-            items:1
-        },
-        600:{
-            items:3
-        },
-        1000:{
-            items:5
-        }
-    }
-});
-	});
 
 			<div class="footer-copyright copyrights-layout-default">
 				<div class="container">
@@ -824,7 +796,7 @@ year to utilise remaining time for preparation of IIT JEE.</h2>
 				</div>
 			</div>
 
-		</footer>	
+		</footer>
 		<!-- End footer -->
 
 	</div>
