--- a/vishesh.html
+++ b/vishesh.html
@@ -278,6 +278,13 @@
 
 							<!-- single course content -->
 							<div class="single-course-content">
+								<h2>VISHESH Course is specially designed for giving an early advantage to the
+students currently in 10th class by starting preparation immediately after 10th
+Board Examination. Ultimate objective of this course is to help students
+prepare for JEE (Main + Advanced) Examination. Initially, this course begins
+with the fundamental study for the syllabus and pattern of JEE (Main +
+Advanced). Students will also be guided to prepare for other competitive
+exams like KVPY, Olympiads etc</h2>
 								<h2>What Will I Learn?</h2>
 								<p>Improve your productivity, get things done, and find more time for what’s most important with Time Management Tips. This weekly series provides actionable time management techniques to help people better manage their time and ultimately become more productive. Time management expert Dave Crenshaw provides a new tip every Monday, touching on a wide variety of topics. Tune in to learn about everything from managing emails and calendars to setting priorities, collaborating with coworkers, reducing interruptions, crafting a “productivity mindset,” and creating a more comfortable and effective work environment.</p>
 								<h2>Learning Objectives</h2>
