--- a/vivek.html
+++ b/vivek.html
@@ -211,7 +211,8 @@
 				</nav>
 			</div>
 
-		</header>		<!-- End Header -->
+		</header>
+		<!-- End Header -->
 
 		<!-- page-banner-section 
 			================================================== -->
@@ -219,7 +220,7 @@
 			<div class="container">
 				<h1>MAIN & ADVANCED</h1>
 				<ul class="page-depth">
-					<li><a href="index.html">Studiare</a></li>
+					
 					<li><a href="courses.html">Courses</a></li>
 					<li><a href="single-course.html">MAIN & ADVANCED</a></li>
 				</ul>
@@ -246,7 +247,7 @@
 										<div class="info">
 											<span class="label">Teacher</span>
 											<div class="value">
-												<a href="single-teacher.html">Vijeta</a>
+												<a href="single-teacher.html">Vishesh</a>
 											</div>
 										</div>
 									</div>
@@ -270,19 +271,31 @@
 									</div>
 								</div>
 								<div class="course-single-gallery">
-									<img src="img/teacher/vijeta.png" alt="">
+									<img src="images/vivek.png" alt="">
 								</div>
 
 							</div>
 
 							<!-- single course content -->
 							<div class="single-course-content">
-								<h2>VISHESH Course is specially designed of students who are currently studying
-in 12th class and are willing to take break for preparation of IIT JEE
-examination. It is an immediate help to those students who have not
-undergone specialised Coaching/ Training for JEE (Main+Advanced) during
-their Class XI & XII. Our objective is to help students do focussed study for 1
-year to utilise remaining time for preparation of IIT JEE.</h2>
+								<h2>(For Students Presently in Class IX going to X in the year 2021)</h2>
+								<p style="font-weight: bold">With JEE Advanced as ultimate aim, this Program helps the student to excel in X Board, XII
+Boards, International Olympiads and national level scholastic exams like National Talent Search
+Exam (NTSE) and Kishore Vaigyanik Protsahan Yojana (KVPY)</p>
+<p>The Joint Entrance Examination (Advanced) is now being conducted through online mode i.e. in computer
+based test mode from 2018. All future JEE Advanced exams will be conducted in Computer based Test (CBT)
+mode only.</p>
+<p>A decision has been taken at the level of the IIT Council to, inter alia, improve the gender balance in the
+undergraduate programs at the IITs to at least 20% in 2020-21 by creating supernumerary seats specifically
+for female candidates, without any reduction in the number of seats that was made available to gender
+neutral candidates in the previous academic year (i.e. academic year 2019-2020).</p>
+<p>In another major change, the Joint Entrance Exam, 2019 (JEE Main) was conducted twice in a year (January
+and April) through Online (Computer Based Test) mode only. Newly Constituted National Testing Agency
+(NTA) has started conducting JEE Main which was earlier conducted by CBSE.</p>
+<p>MKWAY prepares you for JEE Advanced & JEE Main in a Pattern Proof Mode. This means that you are
+prepared to give your best and optimum performance even if the pattern of the exam is changed at the last
+minute. We are the only institute whose Students do well not only in JEE Advanced but also in JEE Main,
+NTSE, X & XII Boards & Other Engineering Entrance Exams</p>
 								<h2>What Will I Learn?</h2>
 								<p>Improve your productivity, get things done, and find more time for what’s most important with Time Management Tips. This weekly series provides actionable time management techniques to help people better manage their time and ultimately become more productive. Time management expert Dave Crenshaw provides a new tip every Monday, touching on a wide variety of topics. Tune in to learn about everything from managing emails and calendars to setting priorities, collaborating with coworkers, reducing interruptions, crafting a “productivity mindset,” and creating a more comfortable and effective work environment.</p>
 								<h2>Learning Objectives</h2>
@@ -773,40 +786,6 @@ year to utilise remaining time for preparation of IIT JEE.</h2>
 				</div>
 
 			</div>
-			<!--------------------------------------------------Testinomials---------------------------------------------------->
-			<div class="owl-carousel owl-theme">
-    <div class="item"><h4>1</h4></div>
-    <div class="item"><h4>2</h4></div>
-    <div class="item"><h4>3</h4></div>
-    <div class="item"><h4>4</h4></div>
-    <div class="item"><h4>5</h4></div>
-    <div class="item"><h4>6</h4></div>
-    <div class="item"><h4>7</h4></div>
-    <div class="item"><h4>8</h4></div>
-    <div class="item"><h4>9</h4></div>
-    <div class="item"><h4>10</h4></div>
-    <div class="item"><h4>11</h4></div>
-    <div class="item"><h4>12</h4></div>
-</div>
-<script>
-	$(document).ready(function (){
-		$('.owl-carousel').owlCarousel({
-    loop:true,
-    margin:10,
-    nav:true,
-    responsive:{
-        0:{
-            items:1
-        },
-        600:{
-            items:3
-        },
-        1000:{
-            items:5
-        }
-    }
-});
-	});
 
 			<div class="footer-copyright copyrights-layout-default">
 				<div class="container">
@@ -824,7 +803,7 @@ year to utilise remaining time for preparation of IIT JEE.</h2>
 				</div>
 			</div>
 
-		</footer>	
+		</footer>
 		<!-- End footer -->
 
 	</div>
