--- a/event2.html
+++ b/event2.html
@@ -21,7 +21,9 @@
 
 </head>
 <style>
-    
+    *{
+        font-family: Arial, Helvetica, sans-serif;
+    }
     table{
         text-align:center;
 
