--- a/samnvyan.html
+++ b/samnvyan.html
@@ -211,7 +211,8 @@
 				</nav>
 			</div>
 
-		</header>		<!-- End Header -->
+		</header>
+		<!-- End Header -->
 
 		<!-- page-banner-section 
 			================================================== -->
@@ -246,7 +247,7 @@
 										<div class="info">
 											<span class="label">Teacher</span>
 											<div class="value">
-												<a href="single-teacher.html">Vijeta</a>
+												<a href="single-teacher.html">Vishwash</a>
 											</div>
 										</div>
 									</div>
@@ -270,19 +271,18 @@
 									</div>
 								</div>
 								<div class="course-single-gallery">
-									<img src="img/teacher/vijeta.png" alt="">
+									<img src="images/samnvyan.png" alt="">
 								</div>
 
 							</div>
 
 							<!-- single course content -->
 							<div class="single-course-content">
-								<h2>VISHESH Course is specially designed of students who are currently studying
-in 12th class and are willing to take break for preparation of IIT JEE
-examination. It is an immediate help to those students who have not
-undergone specialised Coaching/ Training for JEE (Main+Advanced) during
-their Class XI & XII. Our objective is to help students do focussed study for 1
-year to utilise remaining time for preparation of IIT JEE.</h2>
+								<h2>This Course covers the entire JEE(Main+Advanced) syllabus of Class – XII . After
+this, students will be relieved from the institute to focus completely on their Class
+12th-Board Examinations till the third week of March. Meanwhile, we will keep
+conducting various tests like, Open tests, Major Tests, JEE Preparatory Tests,
+AIEEE Preparatory Tests for the revision of the syllabus.</h2>
 								<h2>What Will I Learn?</h2>
 								<p>Improve your productivity, get things done, and find more time for what’s most important with Time Management Tips. This weekly series provides actionable time management techniques to help people better manage their time and ultimately become more productive. Time management expert Dave Crenshaw provides a new tip every Monday, touching on a wide variety of topics. Tune in to learn about everything from managing emails and calendars to setting priorities, collaborating with coworkers, reducing interruptions, crafting a “productivity mindset,” and creating a more comfortable and effective work environment.</p>
 								<h2>Learning Objectives</h2>
@@ -773,40 +773,6 @@ year to utilise remaining time for preparation of IIT JEE.</h2>
 				</div>
 
 			</div>
-			<!--------------------------------------------------Testinomials---------------------------------------------------->
-			<div class="owl-carousel owl-theme">
-    <div class="item"><h4>1</h4></div>
-    <div class="item"><h4>2</h4></div>
-    <div class="item"><h4>3</h4></div>
-    <div class="item"><h4>4</h4></div>
-    <div class="item"><h4>5</h4></div>
-    <div class="item"><h4>6</h4></div>
-    <div class="item"><h4>7</h4></div>
-    <div class="item"><h4>8</h4></div>
-    <div class="item"><h4>9</h4></div>
-    <div class="item"><h4>10</h4></div>
-    <div class="item"><h4>11</h4></div>
-    <div class="item"><h4>12</h4></div>
-</div>
-<script>
-	$(document).ready(function (){
-		$('.owl-carousel').owlCarousel({
-    loop:true,
-    margin:10,
-    nav:true,
-    responsive:{
-        0:{
-            items:1
-        },
-        600:{
-            items:3
-        },
-        1000:{
-            items:5
-        }
-    }
-});
-	});
 
 			<div class="footer-copyright copyrights-layout-default">
 				<div class="container">
@@ -824,8 +790,7 @@ year to utilise remaining time for preparation of IIT JEE.</h2>
 				</div>
 			</div>
 
-		</footer>	
-		<!-- End footer -->
+		</footer>		<!-- End footer -->
 
 	</div>
 	<!-- End Container -->
