--- a/vishwash.html
+++ b/vishwash.html
@@ -278,6 +278,11 @@
 
 							<!-- single course content -->
 							<div class="single-course-content">
+								<h2>This Course covers the entire JEE(Main+Advanced) syllabus of Class – XII . After
+this, students will be relieved from the institute to focus completely on their Class
+12th-Board Examinations till the third week of March. Meanwhile, we will keep
+conducting various tests like, Open tests, Major Tests, JEE Preparatory Tests,
+AIEEE Preparatory Tests for the revision of the syllabus.</h2>
 								<h2>What Will I Learn?</h2>
 								<p>Improve your productivity, get things done, and find more time for what’s most important with Time Management Tips. This weekly series provides actionable time management techniques to help people better manage their time and ultimately become more productive. Time management expert Dave Crenshaw provides a new tip every Monday, touching on a wide variety of topics. Tune in to learn about everything from managing emails and calendars to setting priorities, collaborating with coworkers, reducing interruptions, crafting a “productivity mindset,” and creating a more comfortable and effective work environment.</p>
 								<h2>Learning Objectives</h2>
