--- a/courses.html
+++ b/courses.html
@@ -222,7 +222,7 @@
 			<div class="row">
 				<div class="col-9">
 					<div class="tab-content" style="margin:20px">
-						<div class="tab-pane active" id="iit">
+						<div class="tab-pane" id="iit">
 						   <div class="row">
 						   	   <div class="col-lg-4 col-md-6 col-sm-6">
 								<div class="course-post">
