--- a/event2.html
+++ b/event2.html
@@ -1,3 +1,38 @@
+<!doctype html>
+
+
+<html lang="en" class="no-js">
+<head>
+	<title>MkWay</title>
+
+	<meta charset="utf-8">
+
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+	<link href="https://fonts.googleapis.com/css?family=Raleway:300,400,400i,500,500i,600,700&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+	<link rel="stylesheet" href="css/studiare-assets.min.css">
+	<link rel="stylesheet" type="text/css" href="css/fonts/font-awesome/font-awesome.min.css" media="screen">
+	<link rel="stylesheet" type="text/css" href="css/fonts/elegant-icons/style.css" media="screen">
+	<link rel="stylesheet" type="text/css" href="css/fonts/iconfont/material-icons.css" media="screen">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+
+</head>
+<style>
+    *{
+        font-family: Arial, Helvetica, sans-serif;
+    }
+    table{
+        text-align:center;
+
+    }
+    table thead  tr  th{
+        vertical-align: middle;
+    }
+</style>
+<body>
 <div id="container">
         <!-- Header
             ================================================== -->
@@ -68,10 +103,12 @@
                                     <li><a href="#">Early Lead Classroom</a>
                                     <ul class="dropdown" id="d2">
                                         
-                                            <li><a href="vivek.html">Class 10th</a></li>
-                                            <li><a href="vikas.html">Class 9th</a></li>
-                                            <li><a href="vinay.html">Class 8th</a></li>
-                                            
+                                            <li><a href="#">Class 10th</a></li>
+                                            <li><a href="#">Class 9th</a></li>
+                                            <li><a href="#">Class 8th</a></li>
+                                            <li><a href="#">Class 7th</a></li>
+                                            <li><a href="#">Class 6th</a></li>
+                                            <li><a href="#">Class 5th</a></li>
                                         </ul>
                                     </li>
                                 </ul>
