--- a/index.html
+++ b/index.html
@@ -77,18 +77,18 @@
 									</li>
 									<li><a href="#">Pre-Engineering</a>
 										<ul class="dropdown" id="d2">
-											<li><a href="#">Class 12th Pass</a>
+											<li><a href="vijetaj.html">Class 12th Pass</a>
 												
 											</li>
-											<li><a href="#">Class 12th</a></li>
-											<li><a href="#">Class 11th</a></li>
+											<li><a href="vishwasj.html">Class 12th</a></li>
+											<li><a href="visheshj.html">Class 11th</a></li>
 										</ul>
 									</li>
 									<li><a href="#">Pre-Medical</a>
 										<ul class="dropdown" id="d2">
-										<li><a href="#">Class 12th Pass</a></li>
-											<li><a href="#">Class 12th</a></li>
-											<li><a href="#">Class 11th</a></li>
+										<li><a href="vijetan.html">Class 12th Pass</a></li>
+											<li><a href="vishwasn.html">Class 12th</a></li>
+											<li><a href="visheshn.html">Class 11th</a></li>
 										</ul>
 									</li>
 									<li><a href="#">Early Lead Classroom</a>
