--- a/vivek.html
+++ b/vivek.html
@@ -639,11 +639,8 @@ NTSE, X & XII Boards & Other Engineering Entrance Exams</p>
 					<div class="col-lg-4">
 						<div class="sidebar">
 							<div class="widget course-widget">
-								<p class="price">
-									<span class="price-label">Price</span>
-									<span class="amount"><del>$39.99</del> $29.99</span>
-								</p>
-								<a class="button-one" href="#">Take this course</a>
+								
+								<a class="button-one" href="event2.html">Fee Structure</a>
 								<div class="product-meta-info-list">
 									<h3>Course Features</h3>
 									<div class="meta-info-unit">
@@ -685,19 +682,7 @@ NTSE, X & XII Boards & Other Engineering Entrance Exams</p>
 									<li><a href="#" class="linkedin"><i class="fa fa-linkedin"></i></a></li>
 								</ul>
 							</div>
-							<div class="widget profile-widget">
-								<div class="top-part">
-									<img src="upload/teachers/teacher4-thumb.jpg" alt="Leslie Williams">
-									<div class="name">
-										<h3>Leslie Williams</h3>
-										<span class="job-title">Math</span>
-									</div>
-								</div>
-								<div class="content">
-									<p>Donec tortor massa, dapibus sit amet massa ut, tincidunt dapibus neque. Morbi ac mauris lorem.</p>
-									<a href="single-teacher.html" class="text-link">View full profile</a>
-								</div>
-							</div>
+							
 						</div>
 					</div>
 
