--- a/faculty.html
+++ b/faculty.html
@@ -95,12 +95,10 @@
 									<li><a href="#">Early Lead Classroom</a>
 									<ul class="dropdown" id="d2">
 										
-											<li><a href="#">Class 10th</a></li>
-											<li><a href="#">Class 9th</a></li>
-											<li><a href="#">Class 8th</a></li>
-											<li><a href="#">Class 7th</a></li>
-											<li><a href="#">Class 6th</a></li>
-											<li><a href="#">Class 5th</a></li>
+											<li><a href="vivek.html">Class 10th</a></li>
+											<li><a href="vikas.html">Class 9th</a></li>
+											<li><a href="vinay.html">Class 8th</a></li>
+											
 										</ul>
 									</li>
 								</ul>
@@ -115,40 +113,52 @@
 							</li>
 						</ul>
 
-						<a href="form/apply.php" class="register-modal-opener login-button" style="color:white; background-color:rgb(11, 9, 102)"><i class="material-icons">perm_identity</i> Apply Now</a>
+						<a href="form/apply.php" class="register-modal-opener login-button" style="color:white; background-color:rgb(11, 9, 102)"> Apply Now</a>
 					</div>
 				</div>
 			</nav>
 			</div>
 
 		</header>
-		<style>
-			#n2{
-				width: 100%;
-				height: 100%;
-				display:flex;
-				flex-direction: column;
-				justify-content: center;
-				align-items: center;
-			}
-			#n2 li{
-				list-style: none;
-				margin:5%;
-				font-size:16px;
 
-			}
-			.item{
-				text-align: center;
-			}
-			.owl-carousel{
-				width:50%;
-				margin:auto;
-			}
-			@media(max-width:768px){
-				#n2{
-					display:none;
-				}
-			}
+<style>
+	li{
+		position: relative;
+	}
+	.dropdown{
+		position: absolute;
+	;
+	}
+	#d2{
+		position: absolute;
+		left: 100%;
+	}
+	#n2{
+		width: 100%;
+		height: 100%;
+		display:flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+		}
+	#n2 li{
+		list-style: none;
+		margin:5%;
+		font-size:16px;
+
+	}
+	.item{
+		text-align: center;
+	}
+	.owl-carousel{
+		width:70%;
+		margin:auto;
+	}
+	@media(max-width:768px){
+		#n2{
+			display:none;
+		}
+	}
 		</style>
 		<div class="container-fluid">
 			<div class="row">
@@ -194,12 +204,12 @@
 		<div class="owl-carousel owl-theme">
     <div class="item">
     	<img src="img/arunsir.jpg" class="img-responsive" style="width:200px; height:200px; margin:auto; border-radius:50%">
-    	<h3 style="text-align:center"> Arun Sir<small>H.O.D.</small></h3>
+    	<h3 style="text-align:center"> Arun Sir<h2>H.O.D.</h2></h3>
         <h5 style="text-align:center">Exp 10<sup>+</sup>Years</h5>
     </div>
-    <div class="item"><img src="img/akash.png" class="img-responsive" style="width:200px; height:200px; margin:auto; border-radius:50%">
+    <div class="item"><img src="img/manjusir.jpg" class="img-responsive" style="width:200px; height:200px; margin:auto; border-radius:50%">
     	<h3 style="text-align:center">Manju Sir</h3>
-        <h5 style="text-align:center">Exp 15<sup>+</sup>Years</h5></div>
+        <h5 style="text-align:center">Exp 5<sup>+</sup>Years</h5></div>
     <div class="item"><img src="img/choose/Akshat.jpg" class="img-responsive" style="width:200px; height:200px; margin:auto; border-radius:50%">
     	<h3>Akshat Sir</h3>
     	 <h5 style="text-align:center">Exp 6<sup>+</sup>Years</h5>
@@ -215,10 +225,10 @@
 		</div>	
 		<div class="owl-carousel owl-theme">
      <div class="item"><img src="img/choose/as.jpg" class="img-responsive" style="width:200px; height:200px; margin:auto; border-radius:50%">
-    	<h3 style="text-align:center">A.S. Sir<small>Hod</small></h3>
-        <h5 style="text-align:center">Exp 6<sup>+</sup>Years</h5>
+    	<h3 style="text-align:center">A.S. Sir<h3>Hod</h3></h3>
+        <h5 style="text-align:center">Exp 8<sup>+</sup>Years</h5>
     </div>
-     <div class="item"><img src="img/choose/vishal.jpg" class="img-responsive" style="width:200px; height:200px; margin:auto; border-radius:50%">
+     <div class="item"><img src="img/choose/vishl.jpg" class="img-responsive" style="width:200px; height:200px; margin:auto; border-radius:50%">
     	<h3 style="text-align:center">Vishal Sir</h3>
         <h5 style="text-align:center">Exp 5<sup>+</sup>Years</h5>
     </div>
@@ -235,17 +245,17 @@
 						</div>
 		</div>	
 	<div class="owl-carousel owl-theme">
-     <div class="item"><img src="img/choose/piyush.jpg" class="img-responsive" style="width:200px; height:200px; margin:auto; border-radius:50%">
-    	<h3 style="text-align:center">Piyush Sir<small>Hod</small></h3>
+     <div class="item"><img src="img/choose/pyush.jpg" class="img-responsive" style="width:200px; height:200px; margin:auto; border-radius:50%">
+    	<h3 style="text-align:center">Piyush Sir<h2>Hod</h2></h3>
         <h5 style="text-align:center">Exp 8<sup>+</sup>Years</h5>
     </div>
-     <div class="item"><img src="img/choose/SagarSir.jpg" class="img-responsive" style="width:200px; height:200px; margin:auto; border-radius:50%">
-    	<h3 style="text-align:center">Sagar Sir</h3>
-        <h5 style="text-align:center">Exp 5<sup>+</sup>Years</h5>
+     <div class="item"><img src="img/choose/vishal.jpg" class="img-responsive" style="width:200px; height:200px; margin:auto; border-radius:50%">
+    	<h3 style="text-align:center">Vishal Sir</h3>
+        <h5 style="text-align:center">Exp 7<sup>+</sup>Years</h5>
     </div>
-     <div class="item"><img src="img/choose/budhraj.jpg" class="img-responsive" style="width:200px; height:200px; margin:auto; border-radius:50%">
-    	<h3 style="text-align:center">B.S.R. Sir</h3>
-        <h5 style="text-align:center">Exp 5<sup>+</sup>Years</h5>
+     <div class="item"><img src="img/choose/abhi.jpg" class="img-responsive" style="width:200px; height:200px; margin:auto; border-radius:50%">
+    	<h3 style="text-align:center">Abhinav Sir</h3>
+        <h5 style="text-align:center">Exp 4<sup>+</sup>Years</h5>
     </div>
   
 </div>
@@ -255,21 +265,19 @@
 		</div>	
 		<div class="owl-carousel owl-theme">
     <div class="item">
-    	<img src="img/akash.png" class="img-responsive" style="width:200px; height:200px; margin:auto; border-radius:50%">
-    	<h3 style="text-align:center"> IIT</h3>
-        <h5 style="text-align:center">Akash Sir</h5>
+    	<img src="img/choose/Surbhi.jpg" class="img-responsive" style="width:200px; height:200px; margin:auto; border-radius:50%">
+    	<h3 style="text-align:center">Dr. S.M. Ma'am<h2>Hod</h2></h3>
+        <h5 style="text-align:center">Exp 10<sup>+</sup>Years</h5>
     </div>
-    <div class="item"><img src="img/akash.png" class="img-responsive" style="width:200px; height:200px; margin:auto; border-radius:50%">
-    	<h3 style="text-align:center">IIT</h3>
-        <h5 style="text-align:center">Akash Sir</h5></div>
-    <div class="item"><img src="img/arun.png" class="img-responsive" style="width:200px; height:200px; margin:auto; border-radius:50%">
-    	<h3>NEET</h3>
-    	<h5>ARUN SIR</h5></div>
-    <div class="item"><img src="img/arun.png" class="img-responsive" style="width:200px; height:200px; margin:auto; border-radius:50%">
-    <h3 style="text-align:center">NEET</h3>
-    	<h5 style="text-align:center">ARUN SIR</h5>
+    <div class="item"><img src="img/choose/mayankSir.jpg" class="img-responsive" style="width:200px; height:200px; margin:auto; border-radius:50%">
+    	    	<h3 style="text-align:center">Mayank Sir</h3>
+        <h5 style="text-align:center">Exp 6<sup>+</sup>Years</h5>
     </div>
-
+    <div class="item"><img src="img/choose/neeraj.jpg" class="img-responsive" style="width:200px; height:200px; margin:auto; border-radius:50%">
+    	<h3 style="text-align:center">Neeraj Sir<h2>Hod</h2></h3>
+        <h5 style="text-align:center">Exp 4<sup>+</sup>Years</h5>
+    </div>
+   
    
 </div>		
  <footer>
