--- a/about.html
+++ b/about.html
@@ -271,7 +271,7 @@
                     <div class="col-md-3 col-sm-4 col-12" style="display:flex; justify-content: center;">
                         <div class="single-teacher">
                             <div class="single-teacher-img">
-                                <a href="teacher-details.html"><img src="img/" style="width:270px; height:270px" alt="teacher"></a>  
+                                <a href="teacher-details.html"><img src="images/visheshj.png" style="width:270px; height:270px" alt="teacher"></a>  
                             </div>
                             <div class="single-teacher-content text-center">
                                 <h2><a href="teacher-details.html">NTSE & School</a></h2>
@@ -283,7 +283,7 @@
                     <div class="col-md-3 col-sm-4 col-xs-12" style="display:flex; justify-content: center;">
                         <div class="single-teacher">
                             <div class="single-teacher-img">
-                                <a href="teacher-details.html"><img src="img/teacher/vishwas.png" alt="teacher" style="width:270px; height:270px;"></a>  
+                                <a href="teacher-details.html"><img src="images/vinay.png" alt="teacher" style="width:270px; height:270px;"></a>  
                             </div>
                             <div class="single-teacher-content text-center">
                                 <h2><a href="teacher-details.html">NTSE & School</a></h2>
@@ -295,7 +295,7 @@
                     <div class="col-md-3 col-sm-4 col-xs-12" style="display:flex; justify-content: center;">
                         <div class="single-teacher">
                             <div class="single-teacher-img">
-                                <a href="teacher-details.html"><img src="img/teacher/vijeta.png" alt="teacher" style="width:270px; height:270px"></a>  
+                                <a href="teacher-details.html"><img src="images/vikas.png" alt="teacher" style="width:270px; height:270px"></a>  
                             </div>
                             <div class="single-teacher-content text-center">
                                 <h2><a href="teacher-details.html">kevin williams</a></h2>
@@ -307,7 +307,7 @@
                     <div class="col-md-3 hidden-sm col-xs-12" style="display:flex; justify-content: center;">
                         <div class="single-teacher">
                             <div class="single-teacher-img">
-                                <a href="teacher-details.html"><img src="img/teacher/vijeta.png" style="width:270px; height:270px" alt="teacher"></a>  
+                                <a href="teacher-details.html"><img src="images/vivek.png" style="width:270px; height:270px" alt="teacher"></a>  
                             </div>
                             <div class="single-teacher-content text-center">
                                 <h2><a href="teacher-details.html">salina gomaze</a></h2>
