--- a/faculty.html
+++ b/faculty.html
@@ -210,7 +210,7 @@
     <div class="item"><img src="img/manjusir.jpg" class="img-responsive" style="width:200px; height:200px; margin:auto; border-radius:50%">
     	<h3 style="text-align:center">Manju Sir</h3>
         <h5 style="text-align:center">Exp 5<sup>+</sup>Years</h5></div>
-    <div class="item"><img src="img/choose/Akshat.jpg" class="img-responsive" style="width:200px; height:200px; margin:auto; border-radius:50%">
+    <div class="item"><img src="img/choose/Aksht.jpg" class="img-responsive" style="width:200px; height:200px; margin:auto; border-radius:50%">
     	<h3>Akshat Sir</h3>
     	 <h5 style="text-align:center">Exp 6<sup>+</sup>Years</h5>
     </div>
@@ -228,8 +228,8 @@
     	<h3 style="text-align:center">A.S. Sir<h3>Hod</h3></h3>
         <h5 style="text-align:center">Exp 8<sup>+</sup>Years</h5>
     </div>
-     <div class="item"><img src="img/choose/vishl.jpg" class="img-responsive" style="width:200px; height:200px; margin:auto; border-radius:50%">
-    	<h3 style="text-align:center">Vishal Sir</h3>
+     <div class="item"><img src="img/choose/akshat.jpg" class="img-responsive" style="width:200px; height:200px; margin:auto; border-radius:50%">
+    	<h3 style="text-align:center">Akshat Sir</h3>
         <h5 style="text-align:center">Exp 5<sup>+</sup>Years</h5>
     </div>
      <div class="item"><img src="img/choose/budhraj.jpg" class="img-responsive" style="width:200px; height:200px; margin:auto; border-radius:50%">
@@ -246,7 +246,7 @@
 		</div>	
 	<div class="owl-carousel owl-theme">
      <div class="item"><img src="img/choose/pyush.jpg" class="img-responsive" style="width:200px; height:200px; margin:auto; border-radius:50%">
-    	<h3 style="text-align:center">Piyush Sir<h2>Hod</h2></h3>
+    	<h3 style="text-align:center"><h2>Hod</h2></h3>
         <h5 style="text-align:center">Exp 8<sup>+</sup>Years</h5>
     </div>
      <div class="item"><img src="img/choose/vishal.jpg" class="img-responsive" style="width:200px; height:200px; margin:auto; border-radius:50%">
@@ -274,7 +274,11 @@
         <h5 style="text-align:center">Exp 6<sup>+</sup>Years</h5>
     </div>
     <div class="item"><img src="img/choose/neeraj.jpg" class="img-responsive" style="width:200px; height:200px; margin:auto; border-radius:50%">
-    	<h3 style="text-align:center">Neeraj Sir<h2>Hod</h2></h3>
+    	<h3 style="text-align:center">Neeraj Sir</h3>
+        <h5 style="text-align:center">Exp 4<sup>+</sup>Years</h5>
+    </div>
+    <div class="item"><img src="img/choose/harendra.jpg" class="img-responsive" style="width:200px; height:200px; margin:auto; border-radius:50%">
+    	<h3 style="text-align:center">Neeraj Sirz<h2>Hod</h2></h3>
         <h5 style="text-align:center">Exp 4<sup>+</sup>Years</h5>
     </div>
    
