--- a/index.html
+++ b/index.html
@@ -18,11 +18,16 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Quattrocento+Sans:wght@400;700&display=swap" rel="stylesheet">
 
 </head>
 <body>
 
 <style>
+	*{
+		font-family:'Quattrocento Sans', sans-serif;
+	}
 	li{
 		position: relative;
 	}
@@ -33,6 +38,10 @@
 	#d2{
 		position: absolute;
 		left: 100%;
+	}
+	 a{
+		font-family:'Quattrocento Sans', sans-serif;
+		font-weight:800;
 	}
 	@media(max-width:768px){
 		#classes{
@@ -80,7 +89,7 @@
 
 					<div class="collapse navbar-collapse" id="navbarSupportedContent">
 						<ul class="navbar-nav mr-auto">
-							<li class="drop-link">
+							<li class="drop-link" style="font-weight:bold">
 								<a class="active" href="index.html">Home</a>
 							</li>
 							
@@ -715,7 +724,7 @@
 								<p> "The credit of the position where I stand today clearly goes to my teachers here at MkWay who taught at the depth of the subject, supported me whenever I felt downtrodden. Motivation towards the goal by Arun Sir and Akash Sir proved to be a backbone."</p>
 								<div class="profile-test">
 									<div class="avatar-holder">
-										<img src="upload/testimonials/testimonial-avatar-1.jpg" alt="">
+										<img src="img/choose/1.jpg" alt="">
 									</div>
 									<div class="profile-data">
 										<h2>Shubham Ranka</h2>
@@ -730,7 +739,7 @@
 								<p> “I had a great and preetiful time MkWay Edubrain. Arun Sir, Piyush Sir and Aakash Sir inspired me a lot. Other than teaching very well, they motivated me. The best part was they were frank and familiar with me.”</p>
 								<div class="profile-test">
 									<div class="avatar-holder">
-										<img src="upload/testimonials/testimonial-avatar-2.jpg" alt="">
+										<img src="img/choose/2.jpg" alt="">
 									</div>
 									<div class="profile-data">
 										<h2>Shefali Jain</h2>
@@ -745,7 +754,7 @@
 								<p> “I, Kanishk has secured as AIR 1935 in NEET. I am now studying in Government Medical college, Pondicherry. The credit for my success goes to the MkWay. It's faculty, study material and my friends helped a lot in achieving my aim.”</p>
 								<div class="profile-test">
 									<div class="avatar-holder">
-										<img src="upload/testimonials/testimonial-avatar-3.jpg" alt="">
+										<img src="img/choose/3.jpg" alt="">
 									</div>
 									<div class="profile-data">
 										<h2>Kanishk Tank</h2>
@@ -760,7 +769,7 @@
 								<p> “I am Deepak, and I joined MkWay for my JEE preparation . The study environment of MkWay is very healthy. ”</p>
 								<div class="profile-test">
 									<div class="avatar-holder">
-										<img src="upload/testimonials/testimonial-avatar-4.jpg" alt="">
+										<img src="img/choose/4.jpg" alt="">
 									</div>
 									<div class="profile-data">
 										<h2>Deepak Suthar</h2>
@@ -786,7 +795,7 @@
 
 						<div class="col-lg-4 col-md-6">
 							<div class="footer-widget text-widget">
-								<a href="index.html" class="footer-logo"><img src="img/logo/footerlogo.png" style="width:190px" alt=""></a>
+								<a href="index.html" class="footer-logo"><img src="img/logo/footerlogo.png" style="width:200px; display:flex; justify-content:center; align-item" alt=""></a>
 								<p>A premier coaching institute for the preparation of JEE (Main+Advanced), JEE (Main), Pre-Medical (NEET-UG), Pre-Nurture & Career Foundation (Class VI to X, NTSE & Olympiads). The Institute is well regarded for the high quality entrance exams preparation and produces best results year after year</p>
 								<ul>
 									<li>
