--- a/faculty.html
+++ b/faculty.html
@@ -21,7 +21,8 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   <script src="js/owl.carousel.min.js"></script>
-
+  
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
 
 
 </head>
@@ -177,7 +178,7 @@
 				<div class="col-3">
 					<nav id="n2" style="position:-webkit-sticky; position:sticky; top:0%">
 						<li>
-							<a href="index.html">Home</a>
+							<a href="index.html"><i class="fas fa-home"></i>Home</a>
 						</li>
 						<li>
 							<a href="courses.html">Course</a>
