--- a/contact.html
+++ b/contact.html
@@ -248,6 +248,8 @@
 				</div>
 			</div>
 		</section>
+					
+	 <iframe src="https://www.google.com/maps/embed?pb=!1m23!1m12!1m3!1d57786.74716344858!2d75.80567908000744!3d25.146787880867755!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m8!3e6!4m0!4m5!1s0x396f84db0597ad8f%3A0x7de5313f2ea73743!2sTalwandi%2C%20Kota%2C%20Rajasthan%20324005%2C%20India!3m2!1d25.1467143!2d75.8406988!5e0!3m2!1shi!2sin!4v1610759527113!5m2!1shi!2sin"  frameborder="0" style="border:0; width:60%; height:80vh; margin:0 10%" allowfullscreen="true" aria-hidden="false" tabindex="0"></iframe>
 		<!-- End contact-info section -->
 
 		<!-- footer 
