--- a/courses.html
+++ b/courses.html
@@ -24,53 +24,6 @@
 </head>
 <body>
 
-<style>
-	
-	
-	*{
-        font-family:'Quattrocento Sans', sans-serif;
-    }
-    li{
-        position: relative;
-    }
-    .dropdown{
-        position: absolute;
-    ;
-    }
-    #d2{
-        position: absolute;
-        left: 100%;
-    }
-     a{
-        font-family:'Quattrocento Sans', sans-serif;
-        font-weight:800;
-    }
-    .mobile-nav ul li ul{
-    	background-color: #000;
-    }
-    .mobile-nav ul li{
-        margin:2em 0;
-    }
-   
-
-	@media(max-width:768px){
-		#classes{
-			background-color:#212529;
-		}
-		#d2{
-			background-color: #212529;
-		}
-		#cone{
-			line-height: 1.5em;
-		}
-		.form{
-			display: none;
-
-		}
-	}
-
-
-	</style>
 	<!-- Container -->
 	
 		<!-- Header
@@ -109,8 +62,8 @@
 								<ul class="dropdown" style="background:#fff">
 									<li><a href="#">Online Classroom</a>
 										<ul class="dropdown" id="d2">
-											<a href="#" style="color:white">IIT Online Courses</a>
-											<a href="#" style="color:white">NEET Online Courses</a>
+											<a href="#">IIT Online Courses</a>
+											<a href="#">NEET Online Courses</a>
 										</ul>
 									</li>
 									<li><a href="#">Pre-Engineering</a>
