--- a/courses.html
+++ b/courses.html
@@ -574,7 +574,7 @@
 							   <div class="col-lg-4 col-md-6 col-sm-6">
 								<div class="course-post">
 									<div class="course-thumbnail-holder">
-										<a href="samnyan.html">
+										<a href="samnvyan.html">
 											<img src="images/samnvyan.png" alt="">
 										</a>
 									</div>
