--- a/index.html
+++ b/index.html
@@ -23,6 +23,19 @@
 
 </head>
 <body>
+	<style>
+		  .jumbotron{
+      background-image:url("img/slide4.jpg");
+      background-color: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4));
+      background-size:cover;
+      background-repeat: no-repeat;
+    }
+      .innerslide{
+      width:500px;
+      height: 400px;
+      margin:auto;
+    }
+</style>
 
 	<!-- Container -->
 	
