--- a/index.html
+++ b/index.html
@@ -24,17 +24,21 @@
 </head>
 <body>
 	<style>
-		  .jumbotron{
-      background-image:url("img/slide4.jpg");
-      background-color: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4));
-      background-size:cover;
-      background-repeat: no-repeat;
-    }
-      .innerslide{
+		   .innerslide{
       width:500px;
-      height: 400px;
+      height: 600px;
       margin:auto;
     }
+		  .jumbotron{
+		  	margin:50px;
+		  	width:80vw;
+      background-image:url("img/slide4.jpg");
+      background-color: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7));
+      background-size:cover;
+      background-repeat: no-repeat;
+
+    }
+   
 </style>
 
 	<!-- Container -->
