--- a/courses.html
+++ b/courses.html
@@ -45,7 +45,7 @@
 					</a>
 
 					<div class="collapse navbar-collapse" id="navbarSupportedContent">
-						<ul class="navbar-nav mr-auto">
+						<ul class="navbar-nav ml-auto">
 							<li class="nav-item" style="font-weight:bold">
 								<a class="nav-link active" href="index.html">Home</a>
 							</li>
@@ -103,7 +103,7 @@
 							</li>
 						</ul>
 
-						<a href="form/apply.php" class="login-button"><i class="material-icons"></i> Apply Now</a>
+						
 					</div>
 				</div>
 			</nav>
@@ -197,7 +197,7 @@
 
 							<div class="category-widget widget" >
 								<h2 style="text-align:center">Top Courses</h2>
-								<ul class="nav nav-tabs category-list" style="display:flex; justify-content:center">
+								<ul class="nav nav-tabs category-list" style="display:flex; justify-content:center; font-style:bold; box-shadow:10px 10px lightgrey">
 									<li class="nav-item"><a class="nav-link"  data-toggle="tab" href="#iit">IIT-JEE</a></li>
 								    <li class="nav-item"><a class="nav-link" data-toggle="tab"  href="#neet">NEET</a></li>
 									<li class="nav-item"><a class="nav-link" data-toggle="tab" href="#nuture">PRE-NAUTRE</a></li>		
