--- a/vinay.html
+++ b/vinay.html
@@ -45,7 +45,7 @@
                     </a>
 
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="navbar-nav mr-auto">
+                        <ul class="navbar-nav ml-auto">
                             <li class="nav-item" style="font-weight:bold">
                                 <a class="nav-link active" href="index.html">Home</a>
                             </li>
@@ -103,7 +103,7 @@
                             </li>
                         </ul>
 
-                        <a href="form/apply.php" class="login-button"><i class="material-icons"></i> Apply Now</a>
+                   
                     </div>
                 </div>
             </nav>
